Bump version to 1.4.0 and update dependencies across samples
- Updated version numbers in pom.xml files for dynamic-query-yaml, mcp-snowflake-yaml, spring-boot-snowflake, and samples aggregator.
- Adjusted JAR file references in shell scripts and README files to reflect the new version.
- Enhanced SnowflakeComponent and SnowflakeEndpoint with annotations and additional properties.
- Added acceptance test plan and script for comprehensive testing of sample applications.
- Created example environment file for acceptance tests.
- Documented acceptance test results and added logging for better traceability.